??/??/18 richardjgowers, palnabarun, orbeckst

  * 0.18.1

Enhancements
  * Added various duecredit stubs

Fixes
  * Fixed order of indices in Angle/Dihedral/Improper repr
  * coordinates.memory.MemoryReader now takes np.ndarray only (Issue #1685)
  * Silenced warning when duecredit is not installed (Issue #1872)
  * Fixed HBondAnalysis not considering PBC for distances (Issue #1878)

Changes


04/15/18 tylerjereddy, richardjgowers, palnabarun, bieniekmateusz, kain88-de,
         orbeckst, xiki-tempula, navyakhare, zemanj, ayushsuhane, davidercruz,
         jbarnoud

  * 0.18.0

Enhancements
  * Added flatten_dict function that flattens nested dicts into shallow
    dicts with tuples as keys.
  * Can now pass multiple attributes as a list to groupby function.
    Eg ag.groupby(["masses","charges"])
    (Issue #1839)
  * Added reading of record types (ATOM/HETATM) for PDB, PDBQT and PQR formats
    (Issue #1753)
  * Added Universe.copy to allow creation of an independent copy of a Universe
    (Issue #1029)
  * Added copy method to various core classes including Reader, TransTable,
    Topology, TopologyAttr (Issue #1029)
  * Added `reindex` option to GROWriter to preserve original atom ids when set to
    False (Issue #1777)
  * Can now pass 'atom_style' keyword argument when parsing Lammps Data files
    to specify what is on each line.  Eg atom_style = 'id type charge x y z'
    (Issue #1791)
  * Added periodic boundary condition option to HydrogenBondAnalysis (Issue #1188)
  * Added duecredit to prepare a summary of the citations, when a user
    uses MDAnalysis (Issue #412)
  * Added AtomGroup, ResidueGroup and SegmentGroup to the top module namespace

Fixes
  * Fixed MPI fork() warning when importing MDAnalysis in an Infiniband-enabled
    MPI environment (PR #1794)
  * Fixed waterdynamics SurvivalProbability ignoring the t0 start time
    (Issue #1759)
  * AtomGroup.dimensions now strictly returns a copy (Issue #1582)